--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Weather App",
-  "name": "The Ultimate API Challenge Weather App",
+  "name": "The API Weather App",
   "icons": [
     {
       "src": "favicon.ico",
