--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "repository": "https://github.com/poliach/the-api-weather-react.git",
   "author": "Polina Loz <pollozov@gmail.com>",
   "license": "MIT",
+  "homepage": ".",
   "dependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
     "moment": "^2.29.4",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
